# acceptarium

./: .editorconfig  .gitignore  Cargo.toml  Justfile  Makefile.am  README.md  REUSE.toml  bootstrap.sh  configure.ac  default.nix  deny.toml  flake.nix  shell.nix
.cargo/: config.toml
build-aux/: build.rs  pkg.nix  que_rust_boilerplate.am
lib/: functions.zsh.in
scripts/: debug.sh.in  debug.zsh.in
src/: actions.rs  assets.rs  cli.rs  config.rs  defaults.toml  error.rs  export.rs  ingestable.rs  lib.rs  output.rs  process.rs  run.rs  status.rs  storage.rs  tui.rs  types.rs  utils.rs
src/ingestable/: local_file.rs
src/storage/: dummy.rs  filesystem.rs  git_annex.rs  git_tracker.rs
