[package]
name = "acceptarium"
version = "0.0.0"
description = "CLI tool to facilitate digitized receipt handling in plain text accounting workflows"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[workspace.package]
version = "0.0.0"
authors = ["Caleb Maclennan <caleb@alerque.com>"]
homepage = "https://codeberg.org/plaintextaccounting/acceptarium"
repository = "https://codeberg.org/plaintextaccounting/acceptarium"
license = "AGPL-3.0-only"
edition = "2024"
rust-version = "1.85"

[workspace]
resolver = "2"
members = ["."]

[[bin]]
name = "acceptarium"
required-features = ["cli"]

[lib]
name = "acceptarium"
crate-type = ["rlib", "cdylib"]

[profile.release]
lto = true

[features]
default = []
full = ["cli"]
cli = []

[dependencies]

[package.metadata.bacon]
default_job = "build"

[package.metadata.bacon.jobs.build]
command = ["cargo", "build", "--features", "full", "--color", "always"]

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.git-cliff.git]
protect_breaking_commits = true
commit_parsers = [
  { message = "^feat", group = "<!-- 0 -->Features" },
  { message = "^fix", group = "<!-- 1 -->Bug Fixes" },
  { message = "^perf", group = "<!-- 2 -->Performance" },
  { message = ".*", skip = true },
]
commit_preprocessors = [
  { pattern = '.*', replace_command = 'typos --quiet --write-changes -' },
]

[package.metadata.typos.default]
locale = "en-us"

[package.metadata.typos.default.extend-words]

[package.metadata.typos.files]
ignore-hidden = false
extend-exclude = ["/.git"]

[package.metadata.binstall]
pkg-fmt = "bin"
