[package]
name = "acceptarium"
version = "0.0.0"
description = "CLI tool to facilitate digitized receipt handling in plain text accounting workflows"
readme = "README.md"
build = "build-aux/build.rs"
include = ["*.rs"]
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[workspace.package]
version = "0.0.0"
authors = ["Caleb Maclennan <caleb@alerque.com>"]
homepage = "https://codeberg.org/plaintextaccounting/acceptarium"
repository = "https://codeberg.org/plaintextaccounting/acceptarium"
license = "AGPL-3.0-only"
edition = "2024"
rust-version = "1.85"

[workspace]
resolver = "2"
members = ["."]

[[bin]]
name = "acceptarium"
required-features = ["cli"]

[lib]
name = "acceptarium"
crate-type = ["rlib", "cdylib"]

[profile.release]
lto = true

[features]
default = ["cli", "storages"]
full = ["shells", "storages"]
shells = ["cli", "bash", "elvish", "fish", "manpage", "powershell", "zsh"]
storages = ["git-annex"]
git-annex = ["dep:git2"]
completions = ["cli", "dep:clap_complete"]
cli = ["dep:clap"]
bash = ["completions"]
elvish = ["completions"]
fish = ["completions"]
manpage = ["dep:clap_mangen"]
powershell = ["completions"]
zsh = ["completions"]

[dependencies]
snafu = "0.8"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.config]
version = "0.15"
default-features = false
features = ["toml"]

[dependencies.clap]
version = "4.5"
optional = true
features = ["derive", "color", "wrap_help"]

[dependencies.git2]
version = "0.20"
optional = true
default-features = false

[build-dependencies]
snafu = "0.8"

[build-dependencies.serde]
version = "1.0"
features = ["derive"]

[build-dependencies.clap_complete]
version = "4.5"
optional = true

[build-dependencies.clap_mangen]
version = "0.2"
optional = true

[build-dependencies.clap]
version = "4.5"
optional = true
features = ["derive"]

[build-dependencies.anyhow]
version = "1.0"

[build-dependencies.vergen-gix]
version = "9.1"
default-features = false
features = ["build", "cargo", "rustc"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(build)'] }

[package.metadata.bacon]
default_job = "build"

[package.metadata.bacon.jobs.build]
command = ["cargo", "build", "--features", "full", "--color", "always"]

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.git-cliff.git]
protect_breaking_commits = true
commit_parsers = [
  { message = "^feat", group = "<!-- 0 -->Features" },
  { message = "^fix", group = "<!-- 1 -->Bug Fixes" },
  { message = "^perf", group = "<!-- 2 -->Performance" },
  { message = ".*", skip = true },
]
commit_preprocessors = [
  { pattern = '.*', replace_command = 'typos --quiet --write-changes -' },
]

[package.metadata.typos.default]
locale = "en-us"

[package.metadata.typos.default.extend-words]

[package.metadata.typos.files]
ignore-hidden = false
extend-exclude = ["/.git"]

[package.metadata.binstall]
pkg-fmt = "bin"
