[package]
name = "acceptarium"
version = "0.0.0"
description = "CLI tool to facilitate digitized receipt handling in plain text accounting workflows"
readme = "README.md"
build = "build-aux/build.rs"
include = ["*.rs", "src/defaults.toml"]
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[workspace.package]
version = "0.0.0"
authors = ["Caleb Maclennan <caleb@alerque.com>"]
homepage = "https://codeberg.org/plaintextaccounting/acceptarium"
repository = "https://codeberg.org/plaintextaccounting/acceptarium"
license = "AGPL-3.0-only"
edition = "2024"
rust-version = "1.91"

[workspace]
resolver = "2"
members = ["."]

[[bin]]
name = "acceptarium"
required-features = ["cli"]

[lib]
name = "acceptarium"
crate-type = ["rlib", "cdylib"]

[profile.release]
lto = true

[features]
default = ["cli", "storages", "ml", "ocr"]
full = ["shells", "storages"]
shells = ["cli", "bash", "elvish", "fish", "manpage", "powershell", "zsh"]
storages = ["git-annex"]
git = ["dep:git2"]
git-annex = ["git"]
imagemagick = []
ml = ["ollama"]
ocr = ["imagemagick", "tesseract"]
ollama = ["dep:rig-core", "dep:tokio"]
tesseract = []
completions = ["cli", "dep:clap_complete"]
cli = ["dep:clap"]
bash = ["completions"]
elvish = ["completions"]
fish = ["completions"]
manpage = ["dep:clap_mangen"]
powershell = ["completions"]
zsh = ["completions"]

[dependencies]
base64 = "0.22"
convert_case = "0.6" # held back to match config crate's case feature
glob = "0.3"
nanoid = "0.4"
serde_json = "1.0"
snafu = "0.9"
subprocess = "1.0"
sugar_path = "2.0"
toml = "1.0"
which = "8.0"

[dependencies.blake3]
version = "1.5"
features = ["rayon", "serde"]

[dependencies.config]
version = "0.15"
default-features = false
features = ["toml", "convert-case"]

[dependencies.clap]
version = "4.6"
optional = true
features = ["derive", "color", "wrap_help"]

[dependencies.clap-verbosity-flag]
version = "3.0"

[dependencies.derive_more]
version = "2.1"
features = ["debug"]

[dependencies.flexi_logger]
version = "0.31"
features = ["colors"]

[dependencies.git2]
version = "0.20"
optional = true
default-features = false

[dependencies.log]
version = "0.4"
features = ["serde"]

[dependencies.rig-core]
version = "0.32"
optional = true
features = ["all"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.50"
optional = true
features = ["full"]

[dependencies.tera]
version = "1.0"
default-features = false

[build-dependencies]
snafu = "0.9"

[build-dependencies.serde]
version = "1.0"
features = ["derive"]

[build-dependencies.clap_complete]
version = "4.6"
optional = true

[build-dependencies.clap_mangen]
version = "0.2"
optional = true

[build-dependencies.clap]
version = "4.6"
optional = true
features = ["derive"]

[build-dependencies.clap-verbosity-flag]
version = "3.0"

[build-dependencies.anyhow]
version = "1.0"

[build-dependencies.vergen-gix]
version = "9.1"
default-features = false
features = ["build", "cargo", "rustc"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(build)'] }

[package.metadata.bacon]
default_job = "build"

[package.metadata.bacon.jobs.build]
command = ["cargo", "build", "--features", "full", "--color", "always"]

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.git-cliff.git]
protect_breaking_commits = true
commit_parsers = [
  { message = "^feat", group = "<!-- 0 -->Features" },
  { message = "^fix", group = "<!-- 1 -->Bug Fixes" },
  { message = "^perf", group = "<!-- 2 -->Performance" },
  { message = ".*", skip = true },
]
commit_preprocessors = [
  { pattern = '.*', replace_command = 'typos --quiet --write-changes -' },
]

[package.metadata.typos.default]
locale = "en-us"

[package.metadata.typos.default.extend-words]

[package.metadata.typos.files]
ignore-hidden = false
extend-exclude = ["/.git"]

[package.metadata.binstall]
pkg-fmt = "bin"
